POST /pickup -> POST /routes/<route_id>/pickup
For consistency with the recent changes in GET. Also, geom renamed to geog.
